tests/compile_fail/result_err_type_fail.cpp
#include <feer/result.hpp>

int main() {
    feer::Result<feer::Err> invalid = feer::Err("must-fail");
    (void)invalid;
    return 0;
}
